--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test": "jest --config jest-unit.json",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "stop:test:e2e": "./graceful-shutdown.sh",
     "start:test:e2e": "dotenv -e .env.test -- node dist/src/main 1>test/logs/test.log &",
